--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ autoflake = "*"
 [packages]
 django = "~=4.0"
 gunicorn = "~=20.1"
+dramatiq = {extras = ["rabbitmq", "watch"], version = "*"}
+django-dramatiq = "*"
 
 [requires]
 python_version = "3.8"
