--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,21 @@ version: "3"
 
 services:
 
+    rabbitmq:
+        image: rabbitmq:3.5.7
+        restart: on-failure:5
+        ports:
+            - 5672
+        environment:
+            RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
+            RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
+        volumes:
+            - ./:/usr/src/code
+
+    dramatiq:
+        build: ./
+        command: python manage.py rundramatiq
+
     web:
         build: ./
         command: python3 manage.py runserver 0.0.0.0:8000 --verbosity 1
