--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 
 services:
 
+    
     rabbitmq:
         image: rabbitmq:3.5.7
         restart: on-failure:5
@@ -10,16 +11,17 @@ services:
         environment:
             RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
             RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
-        volumes:
-            - ./:/usr/src/code
+
 
     dramatiq:
         build: ./
         command: python manage.py rundramatiq
+        volumes:
+            - ./:/usr/src/code
 
     web:
         build: ./
-        command: python3 manage.py runserver 0.0.0.0:8000 --verbosity 1
+        command: python3 manage.py runserver 0.0.0.0:8000 
         restart: always
         environment:
             DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
